Fix message overflow with word wrapping
Resolves #30

--- a/frontend/sass/partials/_chat.scss
+++ b/frontend/sass/partials/_chat.scss
@@ -37,6 +37,10 @@
           font-weight: bold;
           margin-bottom: $padding-large-vertical;
         }
+
+        .message-body {
+          word-wrap: break-word;
+        }
       }
     }
   }
